--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+     "postinstall": "npm cache clean --force && rm -rf node_modules package-lock.json && npm install"
   },
   "dependencies": {
     "bootstrap": "^5.3.7",
